# document-mcp

./: .env.example  .gitignore  README.md  check_index.py  pyproject.toml  pytest.ini  test_basic.py
src/: __init__.py  config.py  indexer.py  llm.py  main.py  monitor.py  ollama_installer.py  parser.py  tools.py
tests/: README.md  __init__.py  conftest.py  test_end_to_end.py
tests/integration/: test_tools.py
tests/mcp/: test_mcp_protocol.py  test_mcp_server.py
tests/unit/: test_indexer.py  test_llm.py  test_parser.py
